[metadata]
name = Dokang
version = 0.10.1dev0
description = Lightweight web documentation repository with a search engine
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://dokang.readthedocs.io/en/latest/
author = Polyconseil
author_email = opensource+dokang@polyconseil.fr
license = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Framework :: Pyramid
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Text Processing :: Markup :: HTML
keywords = documentation repository search engine
platform = any
project_urls =
    Documentation = https://dokang.readthedocs.io/en/latest/
    Source = https://github.com/Polyconseil/dokang
    Changelog = https://dokang.readthedocs.io/en/latest/changes.html
    Bug Tracker =  https://github.com/Polyconseil/cogite/dokang

[options]
python_requires = >=3.7
install_requires =
    beautifulsoup4==4.11.2
    Chameleon==3.10.2
    pyramid==1.10.8
    pyramid_chameleon==0.3
    Whoosh==2.7.4
    WTForms==3.0.1
package_dir=
    =src
packages=find:

[options.entry_points]
console_scripts =
    dokang = dokang.cli:main
paste.app_factory =
    main=dokang.app:make_app

[options.package_data]
cogite=backends/graphql/*/*.graphql

[options.packages.find]
where = src

[zest.releaser]
create-wheel = yes
